--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 server.port=${port}
 
-info.app.name=${name}
 info.app.description=${description}
 info.app.version=${version}
 
 security.user.name=admin
 security.user.password=password
 management.context-path=/manage
+
+
+spring.zipkin.baseUrl: http://zipkinserver/
+
+
 
 
