--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,11 @@ security.user.name=admin
 security.user.password=password
 management.context-path=/manage
 
-
 spring.zipkin.baseUrl: http://zipkinserver/
 
+eureka.client.serviceUrl.defaultZone: http://localhost:8761
+eureka.instance.preferIpAddress=true
 
 
 
+feign.hystrix.enabled:true
